[metadata]
# the name should be the same as the package: src/test_bootcamp2019
name = test_bootcamp2019
version = 0.0.1-dev
description = gets you fit and fab.
long_description = file:README.rst

# URLs associated with the project
url = https://github.com/erikadudki/test_bootcamp2019
download_url = https://github.com/erikadudki/test_bootcamp2019/releases
project_urls =
    Bug Tracker = https://github.com/erikadudki/test_bootcamp2019/issues
    Source Code = https://github.com/erikadudki/test_bootcamp2019
    Documentation = https://test_bootcamp2019.readthedocs.io

# Author information
author = Erika Dudkin
author_email = erikadudkin@gmx.de
maintainer = Erika Dudkin
maintainer_email = erikadudkin@gmx.de

# License Information
license = MIT
license_file = LICENSE

keywords =
    Fitness
    Lifestyle
    Code2win
    Systems Biology
    Single cell Analysis

# google: python trove classifiers
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry

[options]
# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
